# emilia-hd-pipeline

./: README.md  emilia_expressive_pipeline_design.md  pyproject.toml  pytest.ini
.claude/: settings.local.json
.local/state/gh/: device-id
configs/: full.yaml  pilot.yaml  pipeline_v1.yaml
docs/: LOCAL_USAGE.md  PILOT_REPORT_2SHARDS.md  PILOT_RUNBOOK.md
emilia_pipeline/: __init__.py
emilia_pipeline/common/: __init__.py  audio.py  config.py  contracts.py  io_utils.py  models.py  prosody_sql.py  synthesize.py
emilia_pipeline/phase1/: __init__.py  repack.py  worker.py
emilia_pipeline/phase2/: __init__.py  dispatch.py  s4_client.py
emilia_pipeline/scoring/: __init__.py  batch_process.py  calibrate.py  hf_package.py  monitor.py  phase1_hf.py  s5_score.py
emilia_pipeline/stages/: __init__.py  s0_prefilter.py  s1_acoustics.py  s2_prosody.py  s3_speaker.py
scripts/: download_zh.py  phase1_guard.py  progress.py  publish_hf.py  run_full.sh
tests/: README.md  conftest.py  test_basics.py  test_contracts_io.py  test_e2e_mock_pipeline.py  test_foundation.py  test_phase1_hf.py  test_phase1_worker.py  test_phase2_s4.py  test_review_fixes.py  test_s0_prefilter.py  test_s1_acoustics.py  test_s2_prosody.py  test_s3_speaker.py  test_s4_retry.py  test_s5_scoring.py
tests/integration/: __init__.py  conftest.py  test_api_qwen_omni.py  test_e2e_real_shards.py  test_gpu_models.py
